--- a/index.html
+++ b/index.html
@@ -480,6 +480,8 @@
 					<ul class="social-links">
 						<li><a href="https://www.facebook.com/nikhilthota1" class="wow fadeInUp"><i class="fa fa-facebook"></i></a></li>
 						<li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".1s"><i class="fa fa-twitter"></i></a></li>
+						<li><a href="https://github.com/nt92" class="wow fadeInUp" data-wow-delay=".2s"><i class="fa fa-github"></i></a></li>
+						<li><a href="https://www.linkedin.com/in/nikhil-thota-ab2731104" class="wow fadeInUp" data-wow-delay=".3s"><i class="fa fa-linkedin"></i></a></li>
 						<li><a href="mailTo:nt92@ufl.edu" class="wow fadeInUp" data-wow-delay=".5s"><i class="fa fa-envelope"></i></a></li>
 					</ul>
 
