added new text and changed some pictures/fonts

--- a/index.html
+++ b/index.html
@@ -425,10 +425,10 @@
 				<div class="col-sm-6 col-sm-offset-3">
 
 					<div class="pfblock-header">
-						<h2 class="pfblock-title">Drop me a line</h2>
+						<h2 class="pfblock-title">Hit me up</h2>
 						<div class="pfblock-line"></div>
 						<div class="pfblock-subtitle">
-							No one lights a lamp in order to hide it behind the door: the purpose of light is to create more light, to open people’s eyes, to reveal the marvels around.
+							I love hearing new ideas and am open to any opportunity that presents itself before me. Please feel free to contact me with this form, or email me at nt92@ufl.edu.
 						</div>
 					</div>
 
@@ -479,10 +479,9 @@
 
 					<ul class="social-links">
 						<li><a href="https://www.facebook.com/nikhilthota1" class="wow fadeInUp"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".1s"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="https://github.com/nt92" class="wow fadeInUp" data-wow-delay=".2s"><i class="fa fa-github"></i></a></li>
-						<li><a href="https://www.linkedin.com/in/nikhil-thota-ab2731104" class="wow fadeInUp" data-wow-delay=".3s"><i class="fa fa-linkedin"></i></a></li>
-						<li><a href="mailTo:nt92@ufl.edu" class="wow fadeInUp" data-wow-delay=".5s"><i class="fa fa-envelope"></i></a></li>
+						<li><a href="https://github.com/nt92" class="wow fadeInUp" data-wow-delay=".1s"><i class="fa fa-github"></i></a></li>
+						<li><a href="https://www.linkedin.com/in/nikhil-thota-ab2731104" class="wow fadeInUp" data-wow-delay=".2s"><i class="fa fa-linkedin"></i></a></li>
+						<li><a href="mailTo:nt92@ufl.edu" class="wow fadeInUp" data-wow-delay=".3s"><i class="fa fa-envelope"></i></a></li>
 					</ul>
 
                     <p class="copyright">
