Changed email stuff

--- a/index.html
+++ b/index.html
@@ -445,17 +445,16 @@
 
 				<div class="col-sm-6 col-sm-offset-3">
 
-					<form action="https://formspree.io/nt92@ufl.edu"
-      method="POST" id="contact-form" role="form">
+					<form id="contact-form" role="form">
 						<div class="ajax-hidden">
 							<div class="form-group wow fadeInUp">
 								<label class="sr-only" for="c_name">Name</label>
-								<input type="text" id="c_name" class="form-control" name="name" placeholder="Name">
+								<input type="text" id="c_name" class="form-control" name="c_name" placeholder="Name">
 							</div>
 
 							<div class="form-group wow fadeInUp" data-wow-delay=".1s">
 								<label class="sr-only" for="c_email">Email</label>
-								<input type="email" id="c_email" class="form-control" name="_replyto" placeholder="E-mail">
+								<input type="email" id="c_email" class="form-control" name="c_email" placeholder="E-mail">
 							</div>
 
 							<div class="form-group wow fadeInUp" data-wow-delay=".2s">
