--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
 								<textarea class="form-control" id="c_message" name="c_message" rows="7" placeholder="Message"></textarea>
 							</div>
 
-							<input type="submit" class="btn btn-lg btn-block wow fadeInUp" data-wow-delay=".3s" value="Send Message"></button>
+							<button type="submit" class="btn btn-lg btn-block wow fadeInUp" data-wow-delay=".3s">Send Message</button>
 						</div>
 						<div class="ajax-response"></div>
 					</form>
