--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
 
 							<button type="submit" class="btn btn-lg btn-block wow fadeInUp" data-wow-delay=".3s">Send Message</button>
 						</div>
-						<div class="ajax-response"></div>
+						<div class="ajax-response" id="response-text"></div>
 					</form>
 
 				</div>
