--- a/index.html
+++ b/index.html
@@ -107,14 +107,14 @@
 
 			<div class="row">
 
-				<div class="col-sm-3">
+				<div class="col-sm-4">
 
 					<div class="iconbox wow slideInLeft">
 						<div class="iconbox-icon">
-							<span class="icon-magic-wand"></span>
+							<span class="icon-screen-smartphone"></span>
 						</div>
 						<div class="iconbox-text">
-							<h3 class="iconbox-title"></h3>
+							<h3 class="iconbox-title">Mobile Development</h3>
 							<div class="iconbox-desc">
 							</div>
 						</div>
@@ -122,14 +122,14 @@
 
 				</div>
 
-				<div class="col-sm-3">
+				<div class="col-sm-4">
 
 					<div class="iconbox wow slideInLeft">
 						<div class="iconbox-icon">
-							<span class="icon-puzzle"></span>
+							<span class="icon-screen-desktop"></span>
 						</div>
 						<div class="iconbox-text">
-							<h3 class="iconbox-title"></h3>
+							<h3 class="iconbox-title">Web Development</h3>
 							<div class="iconbox-desc">
 							</div>
 						</div>
@@ -137,14 +137,14 @@
 
 				</div>
 
-				<div class="col-sm-3">
+				<div class="col-sm-4">
 
 					<div class="iconbox wow slideInRight">
 						<div class="iconbox-icon">
-							<span class="icon-badge"></span>
+							<span class="icon-music-tone-alt"></span>
 						</div>
 						<div class="iconbox-text">
-							<h3 class="iconbox-title"></h3>
+							<h3 class="iconbox-title">Music</h3>
 							<div class="iconbox-desc">
 							</div>
 						</div>
@@ -152,7 +152,7 @@
 
 				</div>
 
-				<div class="col-sm-3">
+				<!-- <div class="col-sm-3">
 
 					<div class="iconbox wow slideInRight">
 						<div class="iconbox-icon">
@@ -165,7 +165,7 @@
 						</div>
 					</div>
 
-				</div>
+				</div> -->
 
 			</div><!-- .row -->
 		</div><!-- .container -->
