--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 	<section id="home" class="pfblock-image screen-height">
         <div class="home-overlay"></div>
 		<div class="intro">
-			<div class="start">Hello, my name is Nikhil Thota and I am a</div>
-			<h1>Software Developer</h1>
+			<div class="start">Hi! my name is Nikhil Thota and I am a</div>
+			<h1>Software Engineer</h1>
 			<div class="start">studying at the University of Florida</div>
 		</div>
 
